docs-archive/apache-airflow-providers-edge3/3.1.0/_sources/_api/airflow/providers/edge3/worker_api/routes/ui/index.rst.txt
airflow.providers.edge3.worker_api.routes.ui
============================================

.. py:module:: airflow.providers.edge3.worker_api.routes.ui


Attributes
----------

.. autoapisummary::

   airflow.providers.edge3.worker_api.routes.ui.ui_router


Functions
---------

.. autoapisummary::

   airflow.providers.edge3.worker_api.routes.ui.worker
   airflow.providers.edge3.worker_api.routes.ui.jobs
   airflow.providers.edge3.worker_api.routes.ui.request_worker_maintenance
   airflow.providers.edge3.worker_api.routes.ui.update_worker_maintenance
   airflow.providers.edge3.worker_api.routes.ui.exit_worker_maintenance
   airflow.providers.edge3.worker_api.routes.ui.request_worker_shutdown
   airflow.providers.edge3.worker_api.routes.ui.delete_worker
   airflow.providers.edge3.worker_api.routes.ui.add_worker_queue
   airflow.providers.edge3.worker_api.routes.ui.remove_worker_queue


Module Contents
---------------

.. py:data:: ui_router

.. py:function:: worker(session, worker_name_pattern = None, queue_name_pattern = None, state = None)

   Return Edge Workers.


.. py:function:: jobs(session, dag_id_pattern = None, run_id_pattern = None, task_id_pattern = None, state = None, queue_pattern = None, worker_name_pattern = None)

   Return Edge Jobs.


.. py:function:: request_worker_maintenance(worker_name, maintenance_request, session, user)

   Put a worker into maintenance mode.


.. py:function:: update_worker_maintenance(worker_name, maintenance_request, session, user)

   Update maintenance comments for a worker.


.. py:function:: exit_worker_maintenance(worker_name, session)

   Exit a worker from maintenance mode.


.. py:function:: request_worker_shutdown(worker_name, session)

   Request shutdown of a worker.


.. py:function:: delete_worker(worker_name, session)

   Delete a worker record from the system.


.. py:function:: add_worker_queue(worker_name, queue_name, session)

   Add a queue to a worker.


.. py:function:: remove_worker_queue(worker_name, queue_name, session)

   Remove a queue from a worker.


